fix: Исправлена ошибка разрешений для панели администратора и улучшено меню
- Добавлено необходимое разрешение  в  для корректной работы боковой панели.
- Восстановлено кастомное меню в Google Sheets с добавлением пункта для ручного открытия панели администратора.
- Обновлена  для включения всех функций администрирования.

--- a/AdminPanel.html
+++ b/AdminPanel.html
@@ -40,6 +40,13 @@
         <h4>Основные действия</h4>
         <button class="action" onclick="runAction('setup')">⚙️ Настроить таблицу администратора</button>
         <button class="action" onclick="runAction('webhook')">🔄 Управление вебхуком</button>
+        <button class="action" onclick="runAction('toggleProtection')">🔒 Снять/Установить защиту листов</button>
+      </div>
+
+      <div class="zone">
+        <h4>Настройки</h4>
+        <button class="action" onclick="runAction('setTelegramToken')">🔑 Установить токен Telegram</button>
+        <button class="action" onclick="runAction('setGeminiApiKey')">🔑 Установить ключ Gemini</button>
       </div>
 
       <div class="zone">
