feat: Реализован ручной режим расчета КБЖУ и генерации меню

--- a/AdminPanel.html
+++ b/AdminPanel.html
@@ -47,6 +47,7 @@
         <h4>Настройки</h4>
         <button class="action" onclick="runAction('setTelegramToken')">🔑 Установить токен Telegram</button>
         <button class="action" onclick="runAction('setGeminiApiKey')">🔑 Установить ключ Gemini</button>
+        <button class="action" onclick="runAction('toggleMode')">🤖/🖐️ Переключить режим (AI/Ручной)</button>
       </div>
 
       <div class="zone">
