--- a/AdminPanel.html
+++ b/AdminPanel.html
@@ -1,76 +1,166 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <base target="_top">
-    <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
-    <style>
-      .container { padding: 20px; }
-      button {
-        width: 100%;
-        margin-bottom: 10px;
-        padding: 10px;
-        font-size: 14px;
-      }
-      .header {
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 15px;
-        border-bottom: 1px solid #ccc;
-        padding-bottom: 10px;
-      }
-      .zone {
-        margin-top: 20px;
-      }
-      .zone h4 {
-        font-size: 14px;
-        color: #666;
-        margin-bottom: 10px;
-      }
-      .red {
-        background-color: #f44336;
-        color: white;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">Панель управления</div>
+<head>
+  <base target="_top">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary-color: #4285f4;
+      --primary-hover: #357ae8;
+      --danger-color: #ea4335;
+      --danger-hover: #d93025;
+      --background-color: #f8f9fa;
+      --text-color: #3c4043;
+      --border-color: #dadce0;
+      --card-background: #ffffff;
+      --font-family: 'Roboto', sans-serif;
+    }
 
-      <div>
-        <h4>Основные действия</h4>
-        <button class="action" onclick="runAction('setup')">⚙️ Настроить таблицу администратора</button>
-        <button class="action" onclick="runAction('webhook')">🔄 Управление вебхуком</button>
-        <button class="action" onclick="runAction('toggleProtection')">🔒 Снять/Установить защиту листов</button>
-      </div>
+    body {
+      font-family: var(--font-family);
+      background-color: var(--background-color);
+      color: var(--text-color);
+      margin: 0;
+      padding: 15px;
+      font-size: 14px;
+    }
 
-      <div class="zone">
-        <h4>Настройки</h4>
-        <button class="action" onclick="runAction('setTelegramToken')">🔑 Установить токен Telegram</button>
-        <button class="action" onclick="runAction('setGeminiApiKey')">🔑 Установить ключ Gemini</button>
-        <button class="action" onclick="runAction('toggleMode')">🤖/🖐️ Переключить режим (AI/Ручной)</button>
-      </div>
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
 
-      <div class="zone">
-        <h4>Опасная зона</h4>
-        <button class="red" onclick="runAction('clear')">🗑️ Очистить текущую таблицу</button>
+    .header {
+      font-size: 20px;
+      font-weight: 500;
+      padding-bottom: 10px;
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .card {
+      background-color: var(--card-background);
+      border-radius: 8px;
+      border: 1px solid var(--border-color);
+      box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+    }
+
+    .card-header {
+      font-size: 16px;
+      font-weight: 500;
+      padding: 12px 16px;
+      border-bottom: 1px solid var(--border-color);
+    }
+
+    .card-content {
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    button {
+      font-family: var(--font-family);
+      font-size: 14px;
+      font-weight: 500;
+      padding: 10px 16px;
+      border-radius: 6px;
+      border: 1px solid transparent;
+      cursor: pointer;
+      transition: background-color 0.2s, box-shadow 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 10px;
+      text-align: left;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .btn-primary {
+      background-color: var(--primary-color);
+      color: white;
+    }
+
+    .btn-primary:hover {
+      background-color: var(--primary-hover);
+      box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+    }
+
+    .btn-secondary {
+      background-color: var(--card-background);
+      color: var(--primary-color);
+      border-color: var(--border-color);
+    }
+
+    .btn-secondary:hover {
+      background-color: #f1f3f4;
+      border-color: #c6cace;
+    }
+
+    .btn-danger {
+      background-color: var(--danger-color);
+      color: white;
+    }
+
+    .btn-danger:hover {
+      background-color: var(--danger-hover);
+      box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+    }
+
+    button:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+
+    .icon { font-size: 18px; }
+
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="header">Панель управления</div>
+
+    <div class="card">
+      <div class="card-header">Основные действия</div>
+      <div class="card-content">
+        <button class="btn-primary action" onclick="runAction('setup')"><span class="icon">⚙️</span>Настроить таблицу</button>
+        <button class="btn-secondary action" onclick="runAction('webhook')"><span class="icon">🔄</span>Управление вебхуком</button>
+        <button class="btn-secondary action" onclick="runAction('toggleProtection')"><span class="icon">🔒</span>Управление защитой</button>
       </div>
     </div>
 
-    <script>
-      function runAction(actionName) {
-        document.querySelectorAll('.action').forEach(b => b.disabled = true);
-        google.script.run
-          .withSuccessHandler(() => {
-            // Можно добавить уведомление или обновить панель
-            document.querySelectorAll('.action').forEach(b => b.disabled = false);
-            google.script.host.close(); // Закрыть панель после успешного выполнения
-          })
-          .withFailureHandler((error) => {
-            alert('Ошибка выполнения: ' + error.message);
-            document.querySelectorAll('.action').forEach(b => b.disabled = false);
-          })
-          .runAdminAction(actionName);
-      }
-    </script>
-  </body>
+    <div class="card">
+      <div class="card-header">Настройки</div>
+      <div class="card-content">
+        <button class="btn-secondary action" onclick="runAction('setTelegramToken')"><span class="icon">🔑</span>Токен Telegram</button>
+        <button class="btn-secondary action" onclick="runAction('setGeminiApiKey')"><span class="icon">🔑</span>Ключ Gemini API</button>
+        <button class="btn-secondary action" onclick="runAction('toggleMode')"><span class="icon">🤖/🖐️</span>Переключить режим</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-header">Опасная зона</div>
+      <div class="card-content">
+        <button class="btn-danger action" onclick="runAction('clear')"><span class="icon">🗑️</span>Очистить таблицу</button>
+      </div>
+    </div>
+
+  </div>
+
+  <script>
+    function runAction(actionName) {
+      document.querySelectorAll('.action').forEach(b => b.disabled = true);
+      google.script.run
+        .withSuccessHandler(() => {
+          google.script.host.close();
+        })
+        .withFailureHandler((error) => {
+          alert('Ошибка выполнения: ' + error.message);
+          document.querySelectorAll('.action').forEach(b => b.disabled = false);
+        })
+        .runAdminAction(actionName);
+    }
+  </script>
+</body>
 </html>
