--- a/AdminPanel.html
+++ b/AdminPanel.html
@@ -2,54 +2,72 @@
 <html>
 <head>
   <base target="_top">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary-color: #4285f4;
-      --primary-hover: #357ae8;
-      --danger-color: #ea4335;
-      --danger-hover: #d93025;
-      --background-color: #f8f9fa;
-      --text-color: #3c4043;
-      --border-color: #dadce0;
-      --card-background: #ffffff;
-      --font-family: 'Roboto', sans-serif;
+      --bg-color: #1a1a2e;
+      --primary-color: #0f3460;
+      --secondary-color: #e94560;
+      --accent-color: #00ffdd;
+      --text-color: #e0e0e0;
+      --border-color: rgba(0, 255, 221, 0.3);
+      --font-main: 'Roboto', sans-serif;
+      --font-title: 'Orbitron', sans-serif;
     }
 
     body {
-      font-family: var(--font-family);
-      background-color: var(--background-color);
+      font-family: var(--font-main);
+      background-color: var(--bg-color);
       color: var(--text-color);
       margin: 0;
-      padding: 15px;
+      padding: 25px;
       font-size: 14px;
+      overflow: hidden;
     }
 
     .container {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 25px;
     }
 
     .header {
-      font-size: 20px;
-      font-weight: 500;
-      padding-bottom: 10px;
+      font-family: var(--font-title);
+      font-size: 24px;
+      font-weight: 700;
+      text-align: center;
+      color: var(--accent-color);
+      text-shadow: 0 0 5px var(--accent-color), 0 0 10px var(--accent-color);
+      padding-bottom: 15px;
       border-bottom: 1px solid var(--border-color);
     }
 
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+    }
+
     .card {
-      background-color: var(--card-background);
+      background-color: var(--primary-color);
       border-radius: 8px;
       border: 1px solid var(--border-color);
-      box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+      box-shadow: 0 0 15px rgba(0, 255, 221, 0.1);
+      transition: all 0.3s ease;
+    }
+
+    .card:hover {
+      box-shadow: 0 0 25px rgba(0, 255, 221, 0.3);
+      border-color: var(--accent-color);
     }
 
     .card-header {
+      font-family: var(--font-title);
       font-size: 16px;
       font-weight: 500;
       padding: 12px 16px;
       border-bottom: 1px solid var(--border-color);
+      color: var(--accent-color);
     }
 
     .card-content {
@@ -60,89 +78,84 @@
     }
 
     button {
-      font-family: var(--font-family);
+      font-family: var(--font-main);
       font-size: 14px;
       font-weight: 500;
-      padding: 10px 16px;
+      padding: 12px 16px;
       border-radius: 6px;
-      border: 1px solid transparent;
+      border: 1px solid var(--border-color);
       cursor: pointer;
-      transition: background-color 0.2s, box-shadow 0.2s;
+      transition: all 0.2s ease-in-out;
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      gap: 10px;
+      gap: 12px;
       text-align: left;
       width: 100%;
       box-sizing: border-box;
+      background-color: transparent;
+      color: var(--text-color);
     }
 
-    .btn-primary {
-      background-color: var(--primary-color);
-      color: white;
-    }
-
-    .btn-primary:hover {
-      background-color: var(--primary-hover);
-      box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
-    }
-
-    .btn-secondary {
-      background-color: var(--card-background);
-      color: var(--primary-color);
-      border-color: var(--border-color);
-    }
-
-    .btn-secondary:hover {
-      background-color: #f1f3f4;
-      border-color: #c6cace;
-    }
-
-    .btn-danger {
-      background-color: var(--danger-color);
-      color: white;
-    }
-
-    .btn-danger:hover {
-      background-color: var(--danger-hover);
-      box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+    button:hover {
+      background-color: var(--secondary-color);
+      color: var(--bg-color);
+      border-color: var(--secondary-color);
+      box-shadow: 0 0 10px var(--secondary-color);
     }
 
     button:disabled {
-      opacity: 0.6;
+      opacity: 0.4;
       cursor: not-allowed;
+      background-color: #333;
     }
 
-    .icon { font-size: 18px; }
+    .danger-zone .card-header { color: var(--secondary-color); }
+    .danger-zone .card { border-color: rgba(233, 69, 96, 0.5); }
+    .danger-zone .card:hover { border-color: var(--secondary-color); box-shadow: 0 0 25px rgba(233, 69, 96, 0.4); }
+    .danger-zone button:hover {
+      background-color: var(--secondary-color);
+      color: white;
+    }
+
+    .icon { font-size: 18px; width: 20px; text-align: center; }
 
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="header">Панель управления</div>
+    <div class="header">ЦЕНТР УПРАВЛЕНИЯ</div>
 
-    <div class="card">
-      <div class="card-header">Основные действия</div>
-      <div class="card-content">
-        <button class="btn-primary action" onclick="runAction('setup')"><span class="icon">⚙️</span>Настроить таблицу</button>
-        <button class="btn-secondary action" onclick="runAction('webhook')"><span class="icon">🔄</span>Управление вебхуком</button>
-        <button class="btn-secondary action" onclick="runAction('toggleProtection')"><span class="icon">🔒</span>Управление защитой</button>
+    <div class="grid-container">
+      <div class="card">
+        <div class="card-header">СИСТЕМА</div>
+        <div class="card-content">
+          <button class="action" onclick="runAction('setup')"><span class="icon">🚀</span>Инициализация</button>
+          <button class="action" onclick="runAction('toggleProtection')"><span class="icon">🛡️</span>Защита листов</button>
+        </div>
       </div>
-    </div>
 
-    <div class="card">
-      <div class="card-header">Настройки</div>
-      <div class="card-content">
-        <button class="btn-secondary action" onclick="runAction('setTelegramToken')"><span class="icon">🔑</span>Токен Telegram</button>
-        <button class="btn-secondary action" onclick="runAction('setGeminiApiKey')"><span class="icon">🔑</span>Ключ Gemini API</button>
-        <button class="btn-secondary action" onclick="runAction('toggleMode')"><span class="icon">🤖/🖐️</span>Переключить режим</button>
+      <div class="card">
+        <div class="card-header">ТЕЛЕГРАМ</div>
+        <div class="card-content">
+          <button class="action" onclick="runAction('webhook')"><span class="icon">📡</span>Статус вебхука</button>
+          <button class="action" onclick="runAction('setTelegramToken')"><span class="icon">🔑</span>Токен Telegram</button>
+        </div>
       </div>
-    </div>
 
-    <div class="card">
-      <div class="card-header">Опасная зона</div>
-      <div class="card-content">
-        <button class="btn-danger action" onclick="runAction('clear')"><span class="icon">🗑️</span>Очистить таблицу</button>
+      <div class="card">
+        <div class="card-header">НАСТРОЙКИ AI</div>
+        <div class="card-content">
+          <button class="action" onclick="runAction('setGeminiApiKey')"><span class="icon">🧠</span>Ключ Gemini API</button>
+          <button class="action" onclick="runAction('toggleMode')"><span class="icon">🤖/🖐️</span>Режим (AI/Ручной)</button>
+        </div>
+      </div>
+
+      <div class="card danger-zone">
+        <div class="card-header">ОПАСНАЯ ЗОНА</div>
+        <div class="card-content">
+          <button class="action" onclick="runAction('clear')"><span class="icon">🗑️</span>Очистить таблицу</button>
+        </div>
       </div>
     </div>
 
