--- a/AdminPanel.html
+++ b/AdminPanel.html
@@ -2,160 +2,141 @@
 <html>
 <head>
   <base target="_top">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg-color: #1a1a2e;
-      --primary-color: #0f3460;
-      --secondary-color: #e94560;
-      --accent-color: #00ffdd;
-      --text-color: #e0e0e0;
-      --border-color: rgba(0, 255, 221, 0.3);
-      --font-main: 'Roboto', sans-serif;
-      --font-title: 'Orbitron', sans-serif;
+      --bg-color: #ffffff;
+      --primary-color: #1a73e8;
+      --primary-hover: #287ae6;
+      --danger-color: #d93025;
+      --danger-hover: #c5221f;
+      --text-color: #202124;
+      --text-secondary-color: #5f6368;
+      --border-color: #dadce0;
+      --font-family: 'Google Sans', 'Roboto', sans-serif;
     }
 
     body {
-      font-family: var(--font-main);
+      font-family: var(--font-family);
       background-color: var(--bg-color);
       color: var(--text-color);
       margin: 0;
-      padding: 25px;
+      padding: 24px;
       font-size: 14px;
-      overflow: hidden;
     }
 
     .container {
       display: flex;
       flex-direction: column;
-      gap: 25px;
+      gap: 24px;
     }
 
     .header {
-      font-family: var(--font-title);
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 700;
-      text-align: center;
-      color: var(--accent-color);
-      text-shadow: 0 0 5px var(--accent-color), 0 0 10px var(--accent-color);
-      padding-bottom: 15px;
+      color: var(--text-color);
+      padding-bottom: 12px;
       border-bottom: 1px solid var(--border-color);
     }
 
-    .grid-container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
-    }
-
-    .card {
-      background-color: var(--primary-color);
-      border-radius: 8px;
-      border: 1px solid var(--border-color);
-      box-shadow: 0 0 15px rgba(0, 255, 221, 0.1);
-      transition: all 0.3s ease;
-    }
-
-    .card:hover {
-      box-shadow: 0 0 25px rgba(0, 255, 221, 0.3);
-      border-color: var(--accent-color);
-    }
-
-    .card-header {
-      font-family: var(--font-title);
-      font-size: 16px;
-      font-weight: 500;
-      padding: 12px 16px;
-      border-bottom: 1px solid var(--border-color);
-      color: var(--accent-color);
-    }
-
-    .card-content {
-      padding: 16px;
+    .section {
       display: flex;
       flex-direction: column;
+      gap: 16px;
+    }
+
+    .section-title {
+      font-size: 16px;
+      font-weight: 500;
+      color: var(--text-secondary-color);
+    }
+
+    .button-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       gap: 12px;
     }
 
     button {
-      font-family: var(--font-main);
+      font-family: var(--font-family);
       font-size: 14px;
       font-weight: 500;
-      padding: 12px 16px;
-      border-radius: 6px;
+      padding: 10px 24px;
+      border-radius: 24px; /* Fully rounded buttons */
       border: 1px solid var(--border-color);
       cursor: pointer;
       transition: all 0.2s ease-in-out;
       display: flex;
       align-items: center;
-      justify-content: flex-start;
-      gap: 12px;
-      text-align: left;
-      width: 100%;
-      box-sizing: border-box;
-      background-color: transparent;
-      color: var(--text-color);
+      justify-content: center;
+      gap: 10px;
+      text-align: center;
+      background-color: var(--bg-color);
+      color: var(--primary-color);
     }
 
     button:hover {
-      background-color: var(--secondary-color);
-      color: var(--bg-color);
-      border-color: var(--secondary-color);
-      box-shadow: 0 0 10px var(--secondary-color);
+      background-color: #f8f9fa;
+      border-color: #c6cace;
+      box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.1);
+    }
+
+    .btn-primary {
+        background-color: var(--primary-color);
+        color: white;
+        border-color: var(--primary-color);
+    }
+
+    .btn-primary:hover {
+        background-color: var(--primary-hover);
+        box-shadow: 0 1px 3px 1px rgba(60, 64, 67, 0.2);
+    }
+
+    .btn-danger {
+      color: var(--danger-color);
+      border-color: var(--danger-color);
+    }
+
+    .btn-danger:hover {
+      background-color: #fce8e6;
+      border-color: var(--danger-hover);
     }
 
     button:disabled {
-      opacity: 0.4;
+      opacity: 0.5;
       cursor: not-allowed;
-      background-color: #333;
     }
 
-    .danger-zone .card-header { color: var(--secondary-color); }
-    .danger-zone .card { border-color: rgba(233, 69, 96, 0.5); }
-    .danger-zone .card:hover { border-color: var(--secondary-color); box-shadow: 0 0 25px rgba(233, 69, 96, 0.4); }
-    .danger-zone button:hover {
-      background-color: var(--secondary-color);
-      color: white;
-    }
-
-    .icon { font-size: 18px; width: 20px; text-align: center; }
+    .icon { font-size: 18px; }
 
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="header">ЦЕНТР УПРАВЛЕНИЯ</div>
+    <div class="header">Панель управления</div>
 
-    <div class="grid-container">
-      <div class="card">
-        <div class="card-header">СИСТЕМА</div>
-        <div class="card-content">
-          <button class="action" onclick="runAction('setup')"><span class="icon">🚀</span>Инициализация</button>
-          <button class="action" onclick="runAction('toggleProtection')"><span class="icon">🛡️</span>Защита листов</button>
-        </div>
+    <div class="section">
+      <div class="section-title">Основные действия</div>
+      <div class="button-grid">
+        <button class="btn-primary action" onclick="runAction('setup')"><span class="icon">🚀</span>Настроить таблицу</button>
+        <button class="action" onclick="runAction('webhook')"><span class="icon">🔄</span>Управление вебхуком</button>
+        <button class="action" onclick="runAction('toggleProtection')"><span class="icon">🔒</span>Защита листов</button>
       </div>
+    </div>
 
-      <div class="card">
-        <div class="card-header">ТЕЛЕГРАМ</div>
-        <div class="card-content">
-          <button class="action" onclick="runAction('webhook')"><span class="icon">📡</span>Статус вебхука</button>
-          <button class="action" onclick="runAction('setTelegramToken')"><span class="icon">🔑</span>Токен Telegram</button>
-        </div>
+    <div class="section">
+      <div class="section-title">Настройки</div>
+      <div class="button-grid">
+        <button class="action" onclick="runAction('setTelegramToken')"><span class="icon">🔑</span>Токен Telegram</button>
+        <button class="action" onclick="runAction('setGeminiApiKey')"><span class="icon">🧠</span>Ключ Gemini API</button>
+        <button class="action" onclick="runAction('toggleMode')"><span class="icon">🤖/🖐️</span>Переключить режим</button>
       </div>
+    </div>
 
-      <div class="card">
-        <div class="card-header">НАСТРОЙКИ AI</div>
-        <div class="card-content">
-          <button class="action" onclick="runAction('setGeminiApiKey')"><span class="icon">🧠</span>Ключ Gemini API</button>
-          <button class="action" onclick="runAction('toggleMode')"><span class="icon">🤖/🖐️</span>Режим (AI/Ручной)</button>
-        </div>
-      </div>
-
-      <div class="card danger-zone">
-        <div class="card-header">ОПАСНАЯ ЗОНА</div>
-        <div class="card-content">
-          <button class="action" onclick="runAction('clear')"><span class="icon">🗑️</span>Очистить таблицу</button>
-        </div>
+    <div class="section">
+      <div class="section-title">Опасная зона</div>
+      <div class="button-grid">
+        <button class="btn-danger action" onclick="runAction('clear')"><span class="icon">🗑️</span>Очистить таблицу</button>
       </div>
     </div>
 
